--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,42 @@
 /* app css stylesheet */
+body {
+    font-family: sans-serif;
+    text-align: center;
+}
+
+#page-wrap {
+    width: 800px;
+    margin: 0 auto;
+}
+
+button {
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: solid;
+    border-width: 1px;
+    cursor:pointer;
+    overflow: hidden;
+    outline:none;
+}
+
+input {
+    width: 300px;
+    border: solid;
+    border-width: 1px;
+    border-color: gray;
+}
+
+textarea {
+    width: 300px;
+    height: 100px;
+    border: solid;
+    border-width: 1px;
+    border-color: gray;
+}
+
+span {
+    white-space: pre-wrap;
+}
 
 .menu {
   list-style: none;
@@ -27,4 +65,19 @@
 .menu > li:nth-child(1):before {
   content: "";
   padding: 0;
+}
+
+.btn-main {
+    font-size: 26px;
+    color: green;
+}
+
+.btn-small {
+    font-size: 14px;
+    color: blue;
+}
+
+.post {
+    text-align: left;
+    width: 500px;  
 }
