Bring app to core code state using new structure

--- a/partials/add.html
+++ b/partials/add.html
@@ -1,1 +1,5 @@
-<p>This is the partial for add new note view.</p>
+<form action='index.html'>
+  <p><input type='text' id='postTitle'>
+  <p><textarea rows='5' id='postText'></textarea>
+  <p><button class='btn-main' ng-click='save()'>Save to notes</button>
+</form>
