--- a/css/app.css
+++ b/css/app.css
@@ -4,12 +4,11 @@ body {
     text-align: center;
 }
 
-#page-wrap {
-    width: 800px;
-    margin: 0 auto;
+a {
+  text-decoration: none;
 }
 
-button {
+button, a {
     background-color: Transparent;
     background-repeat:no-repeat;
     border: solid;
@@ -17,6 +16,7 @@ button {
     cursor:pointer;
     overflow: hidden;
     outline:none;
+    padding: 0.2em;
 }
 
 input {
@@ -38,33 +38,19 @@ span {
     white-space: pre-wrap;
 }
 
+footer {
+   position:absolute;
+   bottom:0;
+}
+
 .menu {
   list-style: none;
-  border-bottom: 0.1em solid black;
   margin-bottom: 2em;
   padding: 0 0 0.5em;
 }
 
-.menu:before {
-  content: "[";
-}
-
-.menu:after {
-  content: "]";
-}
-
 .menu > li {
   display: inline;
-}
-
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
 }
 
 .btn-main {
@@ -72,7 +58,7 @@ span {
     color: green;
 }
 
-.btn-small {
+.btn-small, a {
     font-size: 14px;
     color: blue;
 }
