--- a/partials/list.html
+++ b/partials/list.html
@@ -1,1 +1,6 @@
-<p>This is the partial for notes list view.</p>
+<div class='post' ng-repeat='post in posts track by $index'>
+  <p><span>{{post.title}}</span>
+  <p><span>{{post.date}}</span>
+  <p><span>{{post.text}}</span>
+  <p><button class='btn-small' ng-click="remove($index)">Remove</button>
+ </div>
