--- a/partials/list.html
+++ b/partials/list.html
@@ -1,4 +1,4 @@
-<div class='post' ng-repeat='post in posts track by $index'>
+<div class='post' ng-repeat='post in posts | reverse track by $index'>
   <p><span>{{post.title}}</span>
   <p><span>{{post.date}}</span>
   <p><span>{{post.text}}</span>
