--- a/partials/list.html
+++ b/partials/list.html
@@ -1,6 +1,6 @@
-<div class='post' ng-repeat='post in posts | reverse track by $index'>
+<div class='post' ng-repeat='post in List.posts | reverse track by $index'>
   <p><span>{{post.title}}</span>
   <p><span>{{post.date}}</span>
   <p><span>{{post.text}}</span>
-  <p><button class='btn-small' ng-click="remove($index)">Remove</button>
+  <p><button class='btn-small' ng-click="List.removePost($index)">Remove</button>
  </div>
