--- a/partials/add.html
+++ b/partials/add.html
@@ -1,5 +1,10 @@
 <form action='index.html'>
-  <p><input type='text' id='postTitle'>
-  <p><textarea rows='5' id='postText'></textarea>
-  <p><button class='btn-main' ng-click='save()'>Save to notes</button>
+  <p><input type='text' 
+  			id='postTitle'
+  			ng-model='Post.title'>
+  <p><textarea rows='5' 
+  			id='postText'
+  			ng-model='Post.text'></textarea>
+  <p><button class='btn-main' 
+  			ng-click='Post.saveStorage()'>Save to notes</button>
 </form>
