simplify add controller

--- a/partials/add.html
+++ b/partials/add.html
@@ -6,5 +6,5 @@
   			id='postText'
   			ng-model='Post.text'></textarea>
   <p><button class='btn-main' 
-  			ng-click='Post.saveStorage()'>Save to notes</button>
+  			ng-click='Post.save()'>Save to notes</button>
 </form>
